--- a/settings.yml
+++ b/settings.yml
@@ -1,5 +1,6 @@
-override: ~/.genesis-stack.yml
-mode: debug
-test-environment: vm
-hypervisor: kvm
-environment: ./environments/mock
+--- 
+overrides: '~/.genesis-stack.yml'
+debug: 'enabled'
+hypervisor: 'kvm'
+vagrant_provider: 'libvirt'
+environments: './environments'
