fixed vagrantfile, added stubs for postinst, changing environment generation to support overrides and substitutions for flexible development

--- a/settings.yml
+++ b/settings.yml
@@ -3,4 +3,4 @@ overrides: '~/.genesis-stack.yml'
 debug: 'enabled'
 hypervisor: 'kvm'
 vagrant_provider: 'libvirt'
-environments: './environments'
+environments: 'environments'
