--- a/settings.yml
+++ b/settings.yml
@@ -5,4 +5,6 @@ hypervisor: 'kvm'
 vagrant_provider: 'libvirt'
 environments: 'environments'
 add_authorized_keys: '~/.ssh/id_rsa.pub'
+query_string_keys: 'env_name mach_def ip_addr mac_addr state action log message'
+debug: 'enabled'
 
