various bug fixes

--- a/environments/file-systems.yml
+++ b/environments/file-systems.yml
@@ -10,10 +10,14 @@ name: 'boot'
 mountPoint: '/boot'
 type: 'ext4'
 size: 256
+vg: ''
 
 ---
 name: 'swap'
+mountPoint: ''
 size: '200%'
+type: 'swap'
+vg: 'sys'
 
 ---
 name: 'usr'
