fixed bugs and added more definitions for testing

--- a/settings.yml
+++ b/settings.yml
@@ -3,6 +3,7 @@ overrides: '~/.genesis-stack'
 outside: 'true'
 hypervisor: 'kvm'
 vagrant_provider: 'libvirt'
+test_bridge: 'virbr0'
 environments: 'environments'
 add_authorized_keys: '~/.ssh/id_rsa.pub'
 query_string_keys: 'env_name mach_def ip_addr mac_addr state action log message'
